Changes in version 1.8.1 beta (2009-08-23):
--------------------------------------------
- Switched to use wxXmlSerializer 1.2.1:
  - Added function xsSerializable::RemoveProperty(xsProperty *property).
  - Functions wxXmlSerializer::SerializeToXML() and wxXmlSerializer::DeserializeFromXml() now returns bool value informing about the
    operation success/fail.
  
- Significantly improved compatibility with wxMAC.
- Improved library's performance.
- Implemented stand-alone lines. Use wxSFLineShape::SetStandAlone(), wxSFLineShape::SetSrcPoint() and wxSFLineShape::SetTrgPoint() functions.
  Note that lines can be still top-most shapes only (it means they cannot have a parent shape).
- Added new shape style sfsLOCK_CHILDREN which prevents child shapes' relative position from change if the parent shape is resized.
- Added function bool wxSFShapeBase::IsSuccessor(wxSFShapeBase *parent);
- Added function bool wxSFShapeBase::IsAncestor(wxSFShapeBase *child);
- Updated premake build files to work properly also on Mac OS.
- The thumbnail control (wxSFThumbnail) is refreshed when NULL shape canvas is set.
- More accurate size change of text shapes.
- Fixed possible problem dealing with diagram's loading in a case where IDs' resolving leads to their circular update (patch by basique).
- Fixed possible crash after Cut/Undo/Redo/Delete operations.
- Fixed displaying of bitmap shapes in the canvas thumbnail.
- Fixed addition of new shapes to the canvas if canvas i scrolled (in some cases the new shapes were assigned as a children to inproper parents).
- Functions wxSFDiagramManager::SerializeToXML() and wxSFDiagramManager::DeserializeFromXml() now returns bool value informing about the
  operation success/fail.
- Updated wxSFDemo sample to reflect the latest changes.

Changes in version 1.8.0 beta (2009-06-10):
--------------------------------------------
- Switched to use wxXmlSerializer 1.2.0: